Fix bug with missing border on focused elements.

--- a/app/assets/stylesheets/relaunch/_default.css.scss
+++ b/app/assets/stylesheets/relaunch/_default.css.scss
@@ -17,9 +17,9 @@ body {
   margin: 0;
   padding: 0;
   position: relative;
+
   &:focus {
     outline: none;
-    border: none;
   }
 }
 
